--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,16 @@ cmake_minimum_required(VERSION 3.16)
 project(Ecosystem
   VERSION 0.1.0
   DESCRIPTION "")
+add_compile_options(-g3 -Wall -Wextra -O0)
+
+set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(libs/gfx)
+add_subdirectory(libs/spdlog)
 
-add_executable(main src/main.cpp)
+add_executable(main src/main.cpp src/camera.cpp src/grid.cpp src/random.cpp src/circlemesh.cpp)
 target_include_directories(main PUBLIC include)
-target_link_libraries(main PRIVATE gfx)
+target_link_libraries(main PRIVATE gfx spdlog glad)
 
 option(BUILD_DOC "Build documentation" OFF)
 find_package(Doxygen)
