move cmake configuration for libs into libs/CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,17 @@ add_compile_options(-g3 -Wall -Wextra -O0)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(libs/gfx)
-add_subdirectory(libs/spdlog)
+add_subdirectory(libs)
 
-add_executable(main src/main.cpp src/camera.cpp src/grid.cpp src/random.cpp src/circlemesh.cpp)
+add_executable(main
+  src/main.cpp
+  src/camera.cpp
+  src/grid.cpp
+  src/random.cpp
+  src/circlemesh.cpp
+)
 target_include_directories(main PUBLIC include)
-target_link_libraries(main PRIVATE gfx spdlog glad)
+target_link_libraries(main PRIVATE gfx glm::glm spdlog::spdlog)
 
 option(BUILD_DOC "Build documentation" OFF)
 find_package(Doxygen)
